Before Upload to Heroku

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -12,9 +12,7 @@
             <input type="text" placeholder="Location"/>
             <button>Search</button>
         </form>
-        <p id="msg"></p>
-        
-        <p></p>
+        <p id="msg">Enter Location to search weather data!</p>
         <p>{{author}}</p>
         {{>footer}}
 
