Update on about page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,7 +8,7 @@
         {{>header}}
 
         <img src="images/me.jpg"/>
-        <p>{{author}}</p>
+        <p>This site was created by {{author}}. It uses request data from map.com and weatherstack.com</p>
         {{>footer}}
         <scrip src="js/app.js"></scrip>
     </body>
